banner and zone CRUD

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -12,3 +12,7 @@ powered.by.acid: 'Strona wspierana przez AcidAdServer'
 advertisers: Reklamodawcy
 pages: Strony
 __campaigns: Kampanie
+__banners: Bannery
+__zones: Strefy
+__advertisers: Reklamodawcy
+__pages: Strony
