--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -70,3 +70,5 @@ campaign: Kampania
 use.in.zone: "Użyć w strefie?"
 probability: Prawdopodobieństwo
 show.banners: "Pokaż bannery"
+mail.expiring.subject: "Temat maila"
+mail.expiring.content: "Treść maila"
