--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -69,3 +69,10 @@ image: "Grafika"
 text: "Tekst"
 name.first: "Imię"
 name.last: "Nazwisko"
+paid.to.date: "Opłacono do %date%r."
+paid.to: "Opłacono do"
+not.paid: "Nie opłacono"
+pay.banner.here: "Opłać banner w tej strefie"
+pay.for.banner.in.zone: "Opłać banner \"%banner%\" w strefie %zone%"
+pay.for.banner.in.zone.info: "Strona ta pozwala opłacić banner \"%banner%\" w strefie \"%zone%\""
+next: "Dalej"
