--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -104,3 +104,4 @@ announcement-free.add: 'Dodaj ogłoszenie bezpłatne'
 daily.price: 'Cena/dzień emisji'
 canceled.payment: 'Anulowano zamówienie'
 payment.was.canceled: 'Zamówienie zostało anulowane'
+payment.info: 'Płatność za zamówienie nr %orderNumber%'
