--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -105,3 +105,8 @@ daily.price: 'Cena/dzień emisji'
 canceled.payment: 'Anulowano zamówienie'
 payment.was.canceled: 'Zamówienie zostało anulowane'
 payment.info: 'Płatność za zamówienie nr %orderNumber%'
+zones.info: 'Informacje o strefach'
+zones.short.info: 'Poniżej znajduje się lista aktywnych stron i stref (miejsc, w których umieszczać można bannery) wraz z dostępnymi maksymalnymi rozmiarami'
+acid.ad.server: 'Acid - Serwer reklam'
+fork.on.github: 'github'
+edit.profile: 'edytuj swój profil'
