--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -37,41 +37,41 @@ use.in.zone: 'Use in zone?'
 probability: Probability
 save: Save
 welcome: 'Welcome to AcidAdServer'
-banner.buy: __banner.buy
-announcement.buy: __announcement.buy
-announcement.free.add: __announcement.free.add
+banner.buy: 'Buy banner'
+announcement.buy: 'Buy announcement'
+announcement.free.add: 'Add free announcement'
 edit.page: 'Edit page pageName'
 list.page: 'List of pages'
 new.page: 'New page'
 show.page: 'Page pageName'
-your.banners: __your.banners
-enabled.in.zones: __enabled.in.zones
-payments.list: __payments.list
-add.banner: __add.banner
-pay: __pay
-pay.for.banner.in.zone: __pay.for.banner.in.zone
-pay.for.banner: __pay.for.banner
-pay.for.banner.in.zone.info: __pay.for.banner.in.zone.info
-next: __next
-payments.for.announcement: __payments.for.announcement
-order.number: __order.number
-date.submission: __date.submission
+your.banners: 'Your banners'
+enabled.in.zones: 'Enabled in zones'
+payments.list: 'List of payments'
+add.banner: 'Add banner'
+pay: 'Pay'
+pay.for.banner.in.zone: 'Pay for banner %banner% in zone %zone%'
+pay.for.banner: 'Pay for banner'
+pay.for.banner.in.zone.info: 'This page allows you to pay for banner %banner% in %zone% zone'
+next: 'Next'
+payments.for.announcement: 'Payments for announcement'
+order.number: 'Order number'
+date.submission: 'Submission date'
 pay.to: 'Payment to'
 pay.from: 'Payment from'
-amount: __amount
-is.paid: __is.paid
-zone: __zone
-yes: __yes
-no: __no
-payments.empty: __payments.empty
-zones.for.banner: __zones.for.banner
-banner.in.zone: __banner.in.zone
+amount: 'Amount'
+is.paid: 'Is paid?'
+zone: 'Zone'
+yes: 'Yes'
+no: 'No'
+payments.empty: 'Payments list is empty'
+zones.for.banner: 'Zones for banner'
+banner.in.zone: 'Banners in zone'
 page: Page
-paid.to: __paid.to
-paid.to.date: __paid.to.date
-not.paid: __not.paid
-pay.banner.here: __pay.banner.here
-no.zones.to.add.banner: __no.zones.to.add.banner
+paid.to: 'Paid to'
+paid.to.date: 'Paid to date'
+not.paid: 'Not paid'
+pay.banner.here: 'Pay for banner here'
+no.zones.to.add.banner: 'There are no zones where you can put this banner'
 edit.zone: 'Edit zone zoneName'
 list.zone: 'List of zones'
 enabled: Enabled
@@ -97,3 +97,14 @@ image: Image
 text: Text
 name.first: Firstname
 name.last: Lastname
+all.changes.saved: 'All changes have been saved'
+announcement-free.add: 'Add free text announcement'
+daily.price: 'Daily price'
+canceled.payment: 'Cancelled payment'
+payment.was.canceled: 'Order was cancelled'
+payment.info: 'Payment for order no. %orderNumber%'
+zones.info: 'Zones information'
+zones.short.info: 'Below you can find a list of active pages and zones (places where you can put your banners). Maximum dimensions of them as well as daily prices are also provided.'
+acid.ad.server: 'Acid - Ad server'
+fork.on.github: 'fork on github'
+edit.profile: 'edit your profile'
