--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -108,3 +108,4 @@ zones.short.info: 'Below you can find a list of active pages and zones (places w
 acid.ad.server: 'Acid - Ad server'
 fork.on.github: 'fork on github'
 edit.profile: 'edit your profile'
+analytics.stats: 'Google Analytics stats'
