--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -110,3 +110,4 @@ zones.short.info: 'Poniżej znajduje się lista aktywnych stron i stref (miejsc,
 acid.ad.server: 'Acid - Serwer reklam'
 fork.on.github: 'github'
 edit.profile: 'edytuj swój profil'
+analytics.stats: 'Statystyki Analytics'
