--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -111,3 +111,4 @@ edit.profile: 'Edit your profile'
 analytics.stats: 'Google Analytics stats'
 empty.banners.list: "Banners' list is empty"
 check.zones: 'Activation in zones'
+tutorial: Guide
