--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -111,3 +111,4 @@ edit.profile: 'edytuj swój profil'
 analytics.stats: 'Statystyki Analytics'
 empty.banners.list: 'Lista bannerów jest pusta'
 check.zones: 'Aktywacja w strefach'
+tutorial: Tutorial
