--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -112,3 +112,5 @@ analytics.stats: 'Statystyki Analytics'
 empty.banners.list: 'Lista bannerów jest pusta'
 check.zones: 'Aktywacja w strefach'
 tutorial: Tutorial
+successful.payment: 'Dziękujemy za płatność'
+transaction.was.queued: 'Płatność została zakolejkowana w systemie płatności, sprawdź listę bannerów za jakiś czas. Jeśli dokonałeś płatności za pomocą klienta Bitcoin, będziesz musiał chwilkę poczekać :)'
