--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -112,3 +112,4 @@ analytics.stats: 'Google Analytics stats'
 empty.banners.list: "Banners' list is empty"
 check.zones: 'Activation in zones'
 tutorial: Guide
+extend.the.payment: 'Extend the payment'
