--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -115,3 +115,4 @@ tutorial: Tutorial
 successful.payment: 'Dziękujemy za płatność'
 transaction.was.queued: 'Płatność została zakolejkowana w systemie płatności, sprawdź listę bannerów za jakiś czas. Jeśli dokonałeś płatności za pomocą klienta Bitcoin, będziesz musiał chwilkę poczekać :)'
 extend.the.payment: 'Przedłuż płatność'
+payment.instruction.not.found: 'Nie znaleziono polecenia zapłaty'
