--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -116,3 +116,9 @@ successful.payment: 'Dziękujemy za płatność'
 transaction.was.queued: 'Płatność została zakolejkowana w systemie płatności, sprawdź listę bannerów za jakiś czas. Jeśli dokonałeś płatności za pomocą klienta Bitcoin, będziesz musiał chwilkę poczekać :)'
 extend.the.payment: 'Przedłuż płatność'
 payment.instruction.not.found: 'Nie znaleziono polecenia zapłaty'
+activated.by.user: 'User włączył?'
+active: 'Aktywny'
+inactive: 'Nieaktywny'
+always: 'Zawsze'
+never: 'Nigdy'
+user.decides: 'User decyduje'
