buy banner for 365 (value defined in config) days at once

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -114,3 +114,4 @@ check.zones: 'Activation in zones'
 tutorial: Guide
 extend.the.payment: 'Extend the payment'
 payment.instruction.not.found: 'Payment instruction not found'
+max.days.error: 'You could only buy banner for %maxDays%'
