--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -122,3 +122,4 @@ inactive: 'Nieaktywny'
 always: 'Zawsze'
 never: 'Nigdy'
 user.decides: 'user'
+max.days.error: 'Maksymalna liczba dni, na jaką można wykupić banner to: %maxDays%'
