--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -123,3 +123,6 @@ always: 'Zawsze'
 never: 'Nigdy'
 user.decides: 'user'
 max.days.error: 'Maksymalna liczba dni, na jaką można wykupić banner to: %maxDays%'
+payment.type: 'Typ płatności'
+announcement.standard: 'Ogłoszenie bezpłatne'
+edit.announcement: 'Edytuj ogłoszenie'
