--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -105,7 +105,7 @@ payment.was.canceled: 'Zamówienie zostało anulowane'
 payment.info: 'Płatność za zamówienie nr %orderNumber%'
 zones.info: 'Informacje o strefach'
 zones.short.info: 'Poniżej znajduje się lista aktywnych stron i stref (miejsc, w których umieszczać można bannery) wraz z dostępnymi maksymalnymi rozmiarami'
-acid.ad.server: 'Acid - Serwer reklam'
+acid.ad.server: 'AcidAdServer'
 fork.on.github: github
 edit.profile: 'edytuj swój profil'
 analytics.stats: 'Statystyki Analytics'
@@ -126,3 +126,8 @@ max.days.error: 'Maksymalna liczba dni, na jaką można wykupić banner to: %max
 payment.type: 'Typ płatności'
 announcement.standard: 'Ogłoszenie bezpłatne'
 edit.announcement: 'Edytuj ogłoszenie'
+add.announcement: 'Dodaj ogłoszenie'
+announcement.saved: 'Ogłoszenie zostało zapisane'
+your.announcements: 'Twoje ogłoszenia'
+new.announcement: 'Nowe ogłoszenie'
+announcement.deleted: 'Ogłoszenie zostało usunięte'
