--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -105,7 +105,7 @@ payment.was.canceled: 'Order was cancelled'
 payment.info: 'Payment for order no. %orderNumber%'
 zones.info: 'Zones information'
 zones.short.info: 'Below you can find a list of active pages and zones (places where you can put your banners). Maximum dimensions of them as well as daily prices are also provided.'
-acid.ad.server: 'Acid - Ad server'
+acid.ad.server: 'AcidAdServer'
 fork.on.github: 'fork on github'
 edit.profile: 'Edit your profile'
 analytics.stats: 'Google Analytics stats'
@@ -118,3 +118,8 @@ max.days.error: 'You could only buy banner for %maxDays%'
 payment.type: 'Payment type'
 announcement.standard: 'Free announcement'
 edit.announcement: 'Edit announcement'
+add.announcement: 'Add announcement'
+announcement.saved: 'Announcement saved'
+your.announcements: 'Your announcements'
+new.announcement: 'New announcement'
+announcement.deleted: 'Announcement was successfully removed'
