small change in hero unit

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -123,3 +123,7 @@ announcement.saved: 'Announcement saved'
 your.announcements: 'Your announcements'
 new.announcement: 'New announcement'
 announcement.deleted: 'Announcement was successfully removed'
+announcement.free: 'Free announcements'
+banners: 'Banners'
+announcements: 'Announcements'
+announcement.add: 'Add announcement'
