--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -131,3 +131,7 @@ announcement.saved: 'Ogłoszenie zostało zapisane'
 your.announcements: 'Twoje ogłoszenia'
 new.announcement: 'Nowe ogłoszenie'
 announcement.deleted: 'Ogłoszenie zostało usunięte'
+announcement.free: 'Ogłoszenia darmowe'
+announcements: 'Ogłoszenia'
+banners: 'Bannery'
+announcement.add: 'Dodaj ogłoszenie'
