user-side layout finally done

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -127,3 +127,4 @@ announcement.free: 'Free announcements'
 banners: 'Banners'
 announcements: 'Announcements'
 announcement.add: 'Add announcement'
+default.currency: 'Default currency'
