--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -135,3 +135,4 @@ announcement.free: 'Ogłoszenia darmowe'
 announcements: 'Ogłoszenia'
 banners: 'Bannery'
 announcement.add: 'Dodaj ogłoszenie'
+default.currency: 'Domyślna waluta'
