--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -128,3 +128,6 @@ banners: 'Banners'
 announcements: 'Announcements'
 announcement.add: 'Add announcement'
 default.currency: 'Default currency'
+rules.accept: 'I accept <a href="%rules_url%">the Terms of Service</a>'
+rules: 'Terms of Service'
+register: 'Registration'
