--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -136,3 +136,6 @@ announcements: 'Ogłoszenia'
 banners: 'Bannery'
 announcement.add: 'Dodaj ogłoszenie'
 default.currency: 'Domyślna waluta'
+rules.accept: 'Akceptuję <a href="%rules_url%">regulamin</a>'
+rules: 'Regulamin'
+register: 'Rejestracja'
