--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -131,3 +131,4 @@ default.currency: 'Default currency'
 rules.accept: 'I accept <a href="%rules_url%">the Terms of Service</a>'
 rules: 'Terms of Service'
 register: 'Registration'
+empty.announcements.list: 'Empty announcements list'
