--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -139,3 +139,4 @@ default.currency: 'Domyślna waluta'
 rules.accept: 'Akceptuję <a href="%rules_url%">regulamin</a>'
 rules: 'Regulamin'
 register: 'Rejestracja'
+empty.announcements.list: 'Lista ogłoszeń jest pusta'
