ability to disable announcement by user

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -140,3 +140,4 @@ rules.accept: 'Akceptuję <a href="%rules_url%">regulamin</a>'
 rules: 'Regulamin'
 register: 'Rejestracja'
 empty.announcements.list: 'Lista ogłoszeń jest pusta'
+check.to.disable: 'Wyłącz ogłoszenie'
