--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -132,3 +132,4 @@ rules.accept: 'I accept <a href="%rules_url%">the Terms of Service</a>'
 rules: 'Terms of Service'
 register: 'Registration'
 empty.announcements.list: 'Empty announcements list'
+check.to.disable: 'Disable announcement'
