E-mails are now sent in case of adding/editing announcements

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -133,3 +133,6 @@ rules: 'Terms of Service'
 register: 'Registration'
 empty.announcements.list: 'Empty announcements list'
 check.to.disable: 'Disable announcement'
+hello: 'Hellp!'
+announcement.was.added.or.edited: 'Announcement %title% has been added or edited'
+announcement.edited: 'Announcement %title% has been added or edited by %user%'
