--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -141,3 +141,6 @@ rules: 'Regulamin'
 register: 'Rejestracja'
 empty.announcements.list: 'Lista ogłoszeń jest pusta'
 check.to.disable: 'Wyłącz ogłoszenie'
+hello: 'Witaj!'
+announcement.was.added.or.edited: 'Ogłoszenie %title% zostało dodane lub wyedytowane'
+announcement.edited: 'Ogłoszenie %title% zostało zmienione/dodane przez %user%'
