announcement edit link in email to admins

--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.en.yml
@@ -136,3 +136,5 @@ check.to.disable: 'Disable announcement'
 hello: 'Hellp!'
 announcement.was.added.or.edited: 'Announcement %title% has been added or edited'
 announcement.edited: 'Announcement %title% has been added or edited by %user%'
+edit.in.admin.mode: 'Edit in admin mode'
+advertiser: 'Advertiser'
